<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/descarga"
    tools:context="com.example.rafae.ladys.SecondActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b1"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/Rosa" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ta1"
        android:textSize="20dp"
        android:textColor="@color/Rosa" />
    <EditText
        android:id="@+id/ea1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ea1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ta2"
        android:textSize="20dp"
        android:textColor="@color/Rosa" />/>
    <EditText
        android:id="@+id/ea2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ea1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b4"/>

</LinearLayout>
