<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.rafae.ladys.ThirdActivity"
    android:weightSum="1">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b2"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="@color/Rosa" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b5"
        android:textSize="20dp"
        android:textColor="@color/Rosa" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@drawable/fot1" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b6"
        android:textSize="20dp"
        android:textColor="@color/Rosa" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/fot2"/>

</LinearLayout>
